@@ -291,6 +291,21 @@ or online on <ulink url="http://doc.opensuse.org"/>.
   </section>
 
   <section>
+   <!-- bnc#901869 -->
+   <title>Missing Dependencies for virt-manager</title>
+   <para>
+    If you find a problem executing virt-manager, try installing
+    <systemitem>typelib-1_0-Gtk-3_0</systemitem>,
+    <systemitem>typelib-1_0-SpiceClientGtk-3_0</systemitem> and
+    <systemitem>typelib-1-0-GtkVnc-2_0</systemitem>.
+   </para>
+   <para>
+    In the online update there will be a new version with those
+    dependencies made explicit.
+   </para>
+  </section>
+
+  <section>
    <!-- bnc#902947 -->
    <title>openSUSE pre-13.2 cifstab Migration</title>
 
