@@ -1,4 +1,5 @@
 - New entries: Second Static Mouse Pointer (bnc#899610).
+- New entry: Missing Dependencies for virt-manager (bnc#901869).
 
 13.2.20141030:
 - Update translations.
